Fix editing display on safari kinda

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 }
 
 .text-input {
-    position: absolute;
+    position: fixed;
     background-color: none;
     color: black;
     outline: none;
